--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="config.css">
     <link rel="stylesheet" href="footer/footer.css">
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="section/section.css">
